# Ditto

./: Procfile  main.py  pyproject.toml  speakers.json
cogs/: ASCII.py  hello.py  list-voices.py  scream.py  vocodes.py  voice-chat.py
utils/: Pagination.py
